Implemented screen scraper

--- a/templates/physician_profile.html
+++ b/templates/physician_profile.html
@@ -5,9 +5,16 @@
 
     <body>
         <h2>{{physician_name}}</h2>
-        <p></p>
-        <div style="width: 20%;">
-            <a class="twitter-timeline" href="https://twitter.com/{{twitter_profile_name}}?ref_src=twsrc%5Etfw">Tweets by HermMartens</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-        </div>
+        <section class="container">
+            <div style="float: left; margin-right: 20px;">
+                <img src="{{profile_pic_url | safe }}" width="200px"/>
+            </div>
+            <div style="width: 60%; float: left;">
+                {{contents | safe}}
+            </div>
+            <div style="width: 20%; float: left; height: 50%; overflow-y: auto;">
+                <a class="twitter-timeline" href="https://twitter.com/{{twitter_profile_name}}?ref_src=twsrc%5Etfw">Tweets by HermMartens</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+            </div>
+        </section>
     </body>
 </html>
