--- a/templates/index_search.html
+++ b/templates/index_search.html
@@ -5,7 +5,7 @@
 
     <body>
         <h2>Search my doctor!</h2>
-        <form method="POST">
+        <form method="GET" action="./physician">
             <input type="text" id="searchbox" name="searchbox"/>
             <input type="submit" value="Search!"/>
         </form>
