--- a/templates/physician_profile.html
+++ b/templates/physician_profile.html
@@ -13,7 +13,7 @@
                 {{contents | safe}}
                 <h2>Zorgkaart</h2>
                 <iframe src="./physician_zorgkaart/{{zorgkaart_id}}" style="width: 100%; height: 25%;"></iframe>
-                <h2>Scientific publications</h2>
+                <h2>Wetenschappelijke publicaties</h2>
                 {{articles_html | safe}}
             </div>
             <div style="width: 20%; float: left; height: 50%; overflow-y: auto;">
